--- a/21Octubre.ipynb
+++ b/21Octubre.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "21Octubre.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyPCr2j8hVVR7D0VCBOsRVuf",
+      "authorship_tag": "ABX9TyMV/JIW1XOqhJ+gxa5YktQl",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -61,7 +61,7 @@
         "\n",
         "ejemplo2( 15000 )"
       ],
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -97,7 +97,7 @@
         "\n",
         "ejemplo3(5000)"
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -132,7 +132,7 @@
         "\n",
         "ejemplo4(15000)"
       ],
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -167,7 +167,7 @@
         "\n",
         "ejemplo5(10000000)"
       ],
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -206,7 +206,7 @@
         "    return suma\n",
         "print(ejemplo6( 500 ))"
       ],
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -245,7 +245,7 @@
         "for entrada in range (100,600,100):\n",
         "    ejemplo6( entrada )"
       ],
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -255,6 +255,130 @@
             "Tiempo transcurrido: 3.6453621387 segundos.\n",
             "Tiempo transcurrido: 9.7209935188 segundos.\n",
             "Tiempo transcurrido: 19.1794893742 segundos.\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "i3xjKv6Qyyqn"
+      },
+      "source": [
+        "def ejemplo7( n ):\n",
+        "    count = 0\n",
+        "    for i in range( n ) :\n",
+        "        for j in range( 25 ) :\n",
+        "            for k in range( n ):\n",
+        "                count += 1\n",
+        "    return count"
+      ],
+      "execution_count": 1,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Mypa8tMs1Toi",
+        "outputId": "67a69d1b-eb56-4381-957e-4194f2fea86a",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        }
+      },
+      "source": [
+        "def ejemplo7_2( n ):\n",
+        "    count = 0\n",
+        "    for i in range( n ) :\n",
+        "        for j in range( 25 ) :\n",
+        "            for k in range( n ):\n",
+        "                count += 1\n",
+        "            for k in range( n ):\n",
+        "                count += 1\n",
+        "    return count # 1 + 25n^2 +25n^2\n",
+        "ejemplo7_2(3)"
+      ],
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "450"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 2
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "FEPNbAju3kQF"
+      },
+      "source": [
+        "def ejemplo8( numeros ): # numeros es una lista (arreglo en c)\n",
+        "    total = 0\n",
+        "    for index in range(len(numeros)):\n",
+        "        total = numeros[index]\n",
+        "    return total\n",
+        "ejemplo8(numeros)"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "860tjJD23n1W"
+      },
+      "source": [
+        "def ejemplo9(  n ):\n",
+        "    contador = 0\n",
+        "    basura = 0\n",
+        "    for i in range( n ) :\n",
+        "        contador += 1\n",
+        "    for j in range( n ) :\n",
+        "        contador += 1\n",
+        "    basura = basura + contador\n",
+        "    return contador\n",
+        "\n",
+        "\n",
+        "print(ejemplo9( 5 ))"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "6dPBDpHs4qcr",
+        "outputId": "f363e179-e614-4805-d075-b663cec248df",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        }
+      },
+      "source": [
+        "def ejemplo10( n ):\n",
+        "    count = 0\n",
+        "    for i in range( n ) :\n",
+        "        for j in range( i+1 ) :\n",
+        "            count += 1\n",
+        "    return count\n",
+        "print(ejemplo10(5))\n",
+        "#T(n) = 1+(n^2+n)/2"
+      ],
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "15\n"
           ],
           "name": "stdout"
         }
