Creado mediante Colaboratory

--- a/21Octubre.ipynb
+++ b/21Octubre.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "21Octubre.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyMV/JIW1XOqhJ+gxa5YktQl",
+      "authorship_tag": "ABX9TyPMRhP2+YNkIwXMUyfpjntu",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -274,7 +274,7 @@
         "                count += 1\n",
         "    return count"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -299,7 +299,7 @@
         "    return count # 1 + 25n^2 +25n^2\n",
         "ejemplo7_2(3)"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -357,7 +357,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "6dPBDpHs4qcr",
-        "outputId": "f363e179-e614-4805-d075-b663cec248df",
+        "outputId": "7ad413ef-e2ad-4347-d866-5aedd687a863",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
@@ -370,19 +370,98 @@
         "        for j in range( i+1 ) :\n",
         "            count += 1\n",
         "    return count\n",
-        "print(ejemplo10(5))\n",
-        "#T(n) = 1+(n^2+n)/2"
+        "print(ejemplo10(4))\n",
+        "#T(n) = 1+(n^2+n)/2\n",
+        "\n",
+        "\"\"\"\n",
+        "\n",
+        "n= 3\n",
+        "000\n",
+        "n00 <-- aqui empieza el for interno\n",
+        "nn0 <--- aqui termina el for interno\n",
+        "nnn\n",
+        "n = 4\n",
+        "0000\n",
+        "n000 <-- aqui empieza el for interno\n",
+        "nn00\n",
+        "nnn0 <--- aqui termina el for interno\n",
+        "nnnn\n",
+        "\n",
+        "n =5\n",
+        "00000\n",
+        "n0000 <-- aqui empieza el for interno\n",
+        "nn000\n",
+        "nnn00\n",
+        "nnnn0 <--- aqui termina el for interno\n",
+        "nnnnn\n",
+        "\"\"\""
       ],
-      "execution_count": 3,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "15\n"
+            "10\n"
           ],
           "name": "stdout"
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "MnUSWcmShLQZ"
+      },
+      "source": [
+        "def ejemplo11( n ):\n",
+        "    count = 0\n",
+        "    i = n\n",
+        "    while i > 1 :\n",
+        "        count += 1\n",
+        "        i = i // 2 \n",
+        "    return count\n",
+        "print(ejemplo11(16))\n",
+        "# T(n) =  2 + (2 Log 2 n)"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "TLdwOgiGh6aM"
+      },
+      "source": [
+        "def ejemplo12( n ):\n",
+        "    contador = 0\n",
+        "    for x in range(n):\n",
+        "        contador += ejemplo11(x)\n",
+        "    return contador\n",
+        "\n",
+        "#1+n(2+2log2(n))"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "ZVbff3-Jmb6H"
+      },
+      "source": [
+        "def ejemplo13( x ):\n",
+        "    bandera = x\n",
+        "    contador = 0\n",
+        "    while( bandera >= 10):\n",
+        "        print(f\" x = { bandera } \")\n",
+        "        bandera /= 10\n",
+        "        contador = contador + 1\n",
+        "    print(contador)\n",
+        "# T(x) = log10 x +1\n",
+        "ejemplo13( 1000 )"
+      ],
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
