--- a/21Octubre.ipynb
+++ b/21Octubre.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "21Octubre.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyPMRhP2+YNkIwXMUyfpjntu",
+      "authorship_tag": "ABX9TyMYchLn1SXtKaQtSlaOvKU7",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -459,6 +459,51 @@
         "    print(contador)\n",
         "# T(x) = log10 x +1\n",
         "ejemplo13( 1000 )"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "dEToXok0okcn"
+      },
+      "source": [
+        "def ejemplo14( n ):\n",
+        "    y = n\n",
+        "    z = n\n",
+        "    contador = 0\n",
+        "    while y >= 3: #3\n",
+        "        y /= 3  # 1\n",
+        "        contador += 1  # cont =3\n",
+        "    \n",
+        "    while z >= 3: #27\n",
+        "        z /= 3\n",
+        "        contador += 1\n",
+        "    return contador\n",
+        "print(ejemplo14( 27 ))"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "OJ-Rzj2BomyM"
+      },
+      "source": [
+        "def ejemplo15( n ): \n",
+        "    contador = 0\n",
+        "    for i in range( n ) :\n",
+        "        for j in range( n ) :\n",
+        "            contador += 1\n",
+        "            \n",
+        "    while n > 1 :\n",
+        "        contador += 1\n",
+        "        n /= 2\n",
+        "    return contador\n",
+        "\n",
+        "print(ejemplo15(10))"
       ],
       "execution_count": null,
       "outputs": []
