Creado mediante Colaboratory

--- a/2Diciembre.ipynb
+++ b/2Diciembre.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "2Diciembre.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyNySXq0YLrOQFNKi/1o2+27",
+      "authorship_tag": "ABX9TyMDU3SKM8wRfeMa7kETu+Ff",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -114,6 +114,35 @@
             "3\n",
             "2\n",
             "1\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "khBEqLRuIwse",
+        "outputId": "1451ac1e-bc49-4d59-d502-5d5f40f36d75"
+      },
+      "source": [
+        "def fibonacci( n ):\n",
+        "  if n == 1 or n == 0:\n",
+        "    return n\n",
+        "  else:\n",
+        "    return ( fibonacci(n - 1) + fibonacci(n - 2) )\n",
+        "\n",
+        "print(fibonacci(8))"
+      ],
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "21\n"
           ],
           "name": "stdout"
         }
