--- a/2Diciembre.ipynb
+++ b/2Diciembre.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "2Diciembre.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyMDU3SKM8wRfeMa7kETu+Ff",
+      "authorship_tag": "ABX9TyNOI7c7MEapMqaAPwq5f4bG",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -34,7 +34,7 @@
         "  print(\"Hola\")\n",
         "  fnRecInfinita()"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -71,7 +71,7 @@
         "\n",
         "main()"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -106,7 +106,7 @@
         "\n",
         "printRev( 3 )"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -126,27 +126,98 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "khBEqLRuIwse",
-        "outputId": "1451ac1e-bc49-4d59-d502-5d5f40f36d75"
+        "outputId": "f77d18fe-0137-4b7d-8d6e-6715c07ea684"
       },
       "source": [
         "def fibonacci( n ):\n",
+        "  print(\"Llamada: \", n)\n",
         "  if n == 1 or n == 0:\n",
         "    return n\n",
         "  else:\n",
         "    return ( fibonacci(n - 1) + fibonacci(n - 2) )\n",
         "\n",
-        "print(fibonacci(8))"
+        "print(fibonacci(7))"
       ],
-      "execution_count": 8,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "21\n"
+            "Llamada:  7\n",
+            "Llamada:  6\n",
+            "Llamada:  5\n",
+            "Llamada:  4\n",
+            "Llamada:  3\n",
+            "Llamada:  2\n",
+            "Llamada:  1\n",
+            "Llamada:  0\n",
+            "Llamada:  1\n",
+            "Llamada:  2\n",
+            "Llamada:  1\n",
+            "Llamada:  0\n",
+            "Llamada:  3\n",
+            "Llamada:  2\n",
+            "Llamada:  1\n",
+            "Llamada:  0\n",
+            "Llamada:  1\n",
+            "Llamada:  4\n",
+            "Llamada:  3\n",
+            "Llamada:  2\n",
+            "Llamada:  1\n",
+            "Llamada:  0\n",
+            "Llamada:  1\n",
+            "Llamada:  2\n",
+            "Llamada:  1\n",
+            "Llamada:  0\n",
+            "Llamada:  5\n",
+            "Llamada:  4\n",
+            "Llamada:  3\n",
+            "Llamada:  2\n",
+            "Llamada:  1\n",
+            "Llamada:  0\n",
+            "Llamada:  1\n",
+            "Llamada:  2\n",
+            "Llamada:  1\n",
+            "Llamada:  0\n",
+            "Llamada:  3\n",
+            "Llamada:  2\n",
+            "Llamada:  1\n",
+            "Llamada:  0\n",
+            "Llamada:  1\n",
+            "13\n"
           ],
           "name": "stdout"
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "sUfLCIY9zUt7"
+      },
+      "source": [
+        "# Merge Sort"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "EgZS6J-GzTGn"
+      },
+      "source": [
+        "def merge_sort (arreglo, izquierda , derecha):\n",
+        "  if izquierda >= derecha:\n",
+        "    return\n",
+        "  \n",
+        "  mitad = (izquierda + derecha)//2\n",
+        "  mergue_sort(arreglo , izquierda , mitad)\n",
+        "  merge_sort(arreglo, mitad + 1 , derecha )\n",
+        "  print(\"Llamar Merge\")\n",
+        "  merge(arreglo, izquierda, derecha, mitad)\n",
+        "  #merge_sort(nums, 0 , len(nums - 1))"
+      ],
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
