Creado mediante Colaboratory

--- a/Tarea8_BusquedaBinaria.ipynb
+++ b/Tarea8_BusquedaBinaria.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Tarea8.BusquedaBinaria.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyOfw58cG6erRc9VycCyf+0e",
+      "authorship_tag": "ABX9TyN3UZ+722XYEswgSilI4r5u",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -66,7 +66,7 @@
         "bd.append(alumno10)\r\n",
         "#print(bd)"
       ],
-      "execution_count": 24,
+      "execution_count": 38,
       "outputs": []
     },
     {
@@ -76,20 +76,61 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "6W9HdRjLxOG5",
-        "outputId": "540e819c-2223-4fd3-8733-01fb9d62b6b2"
+        "outputId": "9fa56ab8-7bd3-4414-dc8f-3cf7716bb379"
       },
       "source": [
+        "busbin(bd,2)\r\n",
+        "busbin(bd,4)\r\n",
         "busbin(bd,5)\r\n",
-        "busbin(bd,0)"
+        "busbin(bd,7)\r\n",
+        "busbin(bd,9)\r\n",
+        "busbin(bd,10)\r\n",
+        "busbin(bd,14)\r\n",
+        "busbin(bd,16)\r\n",
+        "busbin(bd,19)\r\n",
+        "busbin(bd,22)\r\n",
+        "\r\n",
+        "#Casos que no existen\r\n",
+        "\r\n",
+        "busbin(bd,0) \r\n",
+        "busbin(bd,3)"
       ],
-      "execution_count": 26,
+      "execution_count": 37,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
+            "Nombre:  Juan \n",
+            "Estudia:  ICO \n",
+            "Con promedio de: 7.67\n",
+            "Nombre:  Rocio \n",
+            "Estudia:  ICI \n",
+            "Con promedio de: 8.67\n",
             "Nombre:  Diego \n",
             "Estudia:  DER \n",
             "Con promedio de: 8.98\n",
+            "Nombre:  May \n",
+            "Estudia:  ICI \n",
+            "Con promedio de: 9.87\n",
+            "Nombre:  Rob \n",
+            "Estudia:  IME \n",
+            "Con promedio de: 10.0\n",
+            "Nombre:  Santi \n",
+            "Estudia:  ICO \n",
+            "Con promedio de: 5.37\n",
+            "Nombre:  Moy \n",
+            "Estudia:  IME \n",
+            "Con promedio de: 6.85\n",
+            "Nombre:  Diana \n",
+            "Estudia:  DER \n",
+            "Con promedio de: 9.99\n",
+            "Nombre:  Zoila \n",
+            "Estudia:  ICO \n",
+            "Con promedio de: 8.22\n",
+            "Nombre:  Armando \n",
+            "Estudia:  ICO \n",
+            "Con promedio de: 7.32\n",
+            "No existe\n",
             "No existe\n"
           ],
           "name": "stdout"
