Creado mediante Colaboratory

--- a/13Enero.ipynb
+++ b/13Enero.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "13Enero.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyMTmlhEkt3aYc7H3ZRxKEUx",
+      "authorship_tag": "ABX9TyNbMmjC961ULEG5fhRM90n3",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -81,25 +81,101 @@
         "        if nodo.right == None:\r\n",
         "          nodo.right == NodoArbol( value, None, None)\r\n",
         "        else: \r\n",
-        "          self.__insert_nodo___(nodo.right, value )"
+        "          self.__insert_nodo___(nodo.right, value )\r\n",
+        "    def buscar ( self, value):\r\n",
+        "      if self.__root == None:\r\n",
+        "        return None\r\n",
+        "      else: \r\n",
+        "        #Haremos busqueda recursiva\r\n",
+        "        return self.__busca_nodo(self.__root , value)\r\n",
+        "\r\n",
+        "    def __busca_nodo(self , nodo , value):\r\n",
+        "      if nodo == None:\r\n",
+        "        return None\r\n",
+        "      elif nodo.dato == value:\r\n",
+        "        return nodo.dato\r\n",
+        "      elif value < nodo.dato: \r\n",
+        "        return self.__busca_nodo( nodo.left, value)\r\n",
+        "      else: \r\n",
+        "        return self.__busca_nodo( nodo.right, value)\r\n",
+        "\r\n",
+        "    def transversal( self, format=\"inorden\"):\r\n",
+        "      if format == \"inorden\": \r\n",
+        "        self.__recorrido_in(self.__root)\r\n",
+        "      elif format == \"preorden\":\r\n",
+        "        self.__recorrido_pre(self.__root)\r\n",
+        "      elif format == \"posorden\":\r\n",
+        "        self.__recorrido_pos(self.__root)\r\n",
+        "      else:\r\n",
+        "        print(\"Formato de recorrido no válido\")\r\n",
+        "    \r\n",
+        "    def __recorrido_pre(self , nodo):\r\n",
+        "      if nodo != None:\r\n",
+        "        print(nodo.dato , end= \",\")\r\n",
+        "        self.__recorrido_pre(nodo.left)\r\n",
+        "        self.__recorrido_pre(nodo.right)\r\n",
+        "\r\n",
+        "    def __recorrido_in(self , nodo):\r\n",
+        "      if nodo != None:\r\n",
+        "        self.__recorrido_in(nodo.left)\r\n",
+        "        print(nodo.dato , end= \",\")\r\n",
+        "        self.__recorrido_in(nodo.right)\r\n",
+        "\r\n",
+        "    def __recorrido_pos(self , nodo):\r\n",
+        "      if nodo != None:\r\n",
+        "        self.__recorrido_pos(nodo.left)\r\n",
+        "        self.__recorrido_pos(nodo.right)\r\n",
+        "        print(nodo.dato , end= \",\")\r\n",
+        "\r\n",
+        "        "
       ],
-      "execution_count": 3,
+      "execution_count": 17,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "rPJ7PwlvcFLe"
+        "id": "rPJ7PwlvcFLe",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "ef2d4cc5-789e-428f-b41b-0b6a40990887"
       },
       "source": [
         "bst = BinarySearchTree()\r\n",
         "bst.insert(50)\r\n",
         "bst.insert(30)\r\n",
         "bst.insert(20)\r\n",
-        "bst.search(30) # true o false?"
+        "\r\n",
+        "res = bst.buscar(30) # true o false?\r\n",
+        "print(\"Dato: \"+ str(res))\r\n",
+        "print( bst.buscar(40))\r\n",
+        "\r\n",
+        "print(\"\\nRecorrido pre: \")\r\n",
+        "bst.transversal(format= \"preorden\")\r\n",
+        "print(\"\\nRecorrido in: \")\r\n",
+        "bst.transversal(format= \"inorden\")\r\n",
+        "print(\"\\nRecorrido pos: \")\r\n",
+        "bst.transversal(format= \"posorden\")"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 18,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Dato: 30\n",
+            "None\n",
+            "\n",
+            "Recorrido pre: \n",
+            "50,30,20,\n",
+            "Recorrido in: \n",
+            "20,30,50,\n",
+            "Recorrido pos: \n",
+            "20,30,50,"
+          ],
+          "name": "stdout"
+        }
+      ]
     }
   ]
 }
